apps/argocd/templates/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.sylvanc.xyz`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-transport
  tls:
    secretName: argocd-tls-cert
